--- a/app/src/main/res/layout/notes_item.xml
+++ b/app/src/main/res/layout/notes_item.xml
@@ -40,7 +40,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/textViewAuthor"
+            android:id="@+id/textViewOriginalAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
